infrastructure/k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptojackpot-web-ingress
  namespace: criptojackpot
  labels:
    app: cryptojackpot-app
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "CJP_APP_AFFINITY"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bff-gateway
                port:
                  number: 80
          - path: /lottery-hub
            pathType: Prefix
            backend:
              service:
                name: bff-gateway
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: bff-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cryptojackpot-app
                port:
                  number: 80
